force-app/main/default/objects/Appointment__c/fields/Check_Out_Time__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Time__c</fullName>
    <label>Check Out Time</label>
    <type>DateTime</type>
</CustomField>