force-app/main/default/objects/Appointment__c/fields/Counter_Number__c.field-meta.xml
<CustomField>
    <fullName>Counter_Number__c</fullName>
    <label>Counter Number</label>
    <type>Text</type>
    <length>10</length>
</CustomField>