force-app/main/default/objects/Appointment__c/fields/Passport_Application__c.field-meta.xml
<CustomField>
    <fullName>Passport_Application__c</fullName>
    <label>Passport Application</label>
    <type>MasterDetail</type>
    <referenceTo>Passport_Application__c</referenceTo>
    <relationshipName>Appointments</relationshipName>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipOrder>0</relationshipOrder>
</CustomField>