force-app/main/default/objects/Appointment__c/validationRules/Check_Out_After_Check_In.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Out_After_Check_In</fullName>
    <active>true</active>
    <description>Counter service duration is derived from these two timestamps.</description>
    <errorConditionFormula>AND( NOT(ISBLANK(Check_In_Time__c)), NOT(ISBLANK(Check_Out_Time__c)), Check_Out_Time__c &lt;= Check_In_Time__c )</errorConditionFormula>
    <errorDisplayField>Check_Out_Time__c</errorDisplayField>
    <errorMessage>Check Out Time must be later than Check In Time.</errorMessage>
</ValidationRule>